--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Chad Ross</li>
-          <li><a href="#">Home</a></li>
+          <!-- <li><a href="index.html">Home</a></li> -->
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Chad Ross" class="profile-image">
+      <img src="images/me.png" alt="Photo of Chad Ross" class="profile-image">
       <h1 class="tag name">Hello, I’m Chad.</h1>
       <p class="tag location">I am from Trinidad & Tobago.</p>
     </header>
@@ -30,7 +30,7 @@
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p><a href="http://www.teamtreehouse.com">Team Tree House</a> is helping me increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -39,15 +39,15 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I'm excited to learn all of the above languages and work for a web design firm building impressive online websites.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="http://twitter.com/intent/tweet?screen_name=chadross0528" target="_blank" class="social twitter">Twitter</a></li>
+        <li><a href="https://tt.linkedin.com/in/chad-ross-515623b7" target="_blank" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/chadross0528" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2016, Chad Ross</p>
     </footer>
